--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_STRAPI_API_URL=http://localhost:1337
+#NEXT_PUBLIC_STRAPI_API_URL=http://localhost:1337
+NEXT_PUBLIC_STRAPI_API_URL=https://scc-strapi.herokuapp.com
 PREVIEW_SECRET=<insert random token here>
